--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint . --max-warnings=0",
-    "type-check": "tsc --noEmit",
+  "type-check": "tsc --noEmit",
+  "typecheck:tests": "tsc -p tsconfig.tests.json --noEmit",
     "analyze": "ANALYZE=true next build",
     "test": "vitest run",
     "test:watch": "vitest",
