--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,45 +1,32 @@
 {
   "ci": {
     "collect": {
+      "startServerCommand": "npm run start -- -p 3000",
+      "startServerReadyPattern": "started server on",
+      "startServerReadyTimeout": 180000,
       "url": [
         "http://localhost:3000/",
-        "http://localhost:3000/quiz/join",
+        "http://localhost:3000/login",
         "http://localhost:3000/teacher",
-        "http://localhost:3000/teacher/quiz/create",
-        "http://localhost:3000/teacher/quiz"
+        "http://localhost:3000/student",
+        "http://localhost:3000/teacher/classes"
       ],
-      "numberOfRuns": 3,
+      "numberOfRuns": 1,
       "settings": {
-        "preset": "desktop",
-        "formFactor": "mobile",
-        "screenEmulation": { "mobile": true, "width": 375, "height": 667, "deviceScaleFactor": 2 },
+        "emulatedFormFactor": "desktop",
         "throttling": {
-          "rttMs": 150,
-          "throughputKbps": 1638.4,
-          "cpuSlowdownMultiplier": 4
+          "rttMs": 40,
+          "throughputKbps": 10240,
+          "cpuSlowdownMultiplier": 1,
+          "requestLatencyMs": 0,
+          "downloadThroughputKbps": 0,
+          "uploadThroughputKbps": 0
         }
       }
     },
-    "assert": {
-      "assertions": {
-        "categories:performance": ["error", { "minScore": 0.85 }],
-        "categories:accessibility": ["error", { "minScore": 0.90 }],
-        "categories:pwa": ["error", { "minScore": 1.0 }],
-        "categories:best-practices": ["error", { "minScore": 0.90 }],
-        "largest-contentful-paint": ["error", { "maxNumericValue": 2500 }],
-        "first-input-delay": ["error", { "maxNumericValue": 100 }],
-        "total-blocking-time": ["error", { "maxNumericValue": 300 }],
-        "cumulative-layout-shift": ["error", { "maxNumericValue": 0.10 }],
-        "performance-budget": ["error", { "budgetsFile": "lighthouse-budgets.json" }],
-        "uses-text-compression": "error",
-        "unminified-javascript": "error",
-        "color-contrast": "error",
-        "aria-valid-attr": "error",
-        "button-name": "error",
-        "form-field-multiple-labels": "error",
-        "image-alt": "error"
-      }
-    },
-    "upload": { "target": "temporary-public-storage" }
+    "upload": {
+      "target": "filesystem",
+      "outputDir": "lhci_reports"
+    }
   }
 }
