--- a/package.json
+++ b/package.json
@@ -44,7 +44,6 @@
     "validate:env": "node scripts/validate-env.js"
   },
   "dependencies": {
-    "@supabase/ssr": "^0.4.0",
     "@auth/supabase-adapter": "^1.10.0",
     "@heroui/react": "^2.8.4",
     "@heroui/theme": "^2.4.22",
@@ -53,7 +52,9 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@sentry/nextjs": "^10.15.0",
     "@stripe/stripe-js": "^7.9.0",
+    "@supabase/ssr": "^0.4.0",
     "@supabase/supabase-js": "^2.57.4",
     "@tanstack/react-table": "^8.21.3",
     "@types/qrcode": "^1.5.5",
