--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "health:skolverket": "tsx scripts/health/skolverket.ts",
     "health:all": "npm run health:openai && npm run health:ably && npm run health:supabase && npm run health:stripe && npm run health:skolverket",
     "validate:env": "node scripts/validate-env.js",
-    "verify:emails": "tsx scripts/verify-emails.ts"
+    "verify:emails": "tsx scripts/verify-emails.ts",
+    "rls:probe": "tsx scripts/rls-probe.ts"
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.10.0",
