--- a/package.json
+++ b/package.json
@@ -109,6 +109,7 @@
     "eslint-config-next": "^15.5.3",
     "jsdom": "^27.0.0",
     "msw": "^1.3.5",
+    "pdf-parse": "^1.1.1",
     "playwright": "^1.55.0",
     "postcss": "^8.5.4",
     "tailwindcss": "^4.1.13",
