--- a/package.json
+++ b/package.json
@@ -108,6 +108,7 @@
     "eslint": "^9.35.0",
     "eslint-config-next": "^15.5.3",
     "jsdom": "^27.0.0",
+    "jszip": "^3.10.1",
     "msw": "^1.3.5",
     "pdf-parse": "^1.1.1",
     "playwright": "^1.55.0",
